src/styles/scss/Matrix/PostIt.scss
@import "../constants/colorScheme";

.PostIt {
    position: relative;
    font-family: "Calibri Light";
    transform-origin: center;
    height: 100%;
    width: 100%;
    transition: font-size 0.5s, background-color 0.5s;
    display: flex;
}

.big, .vertical {
    flex-direction: column;
}

.PostIt:before {
    z-index: -1;
    position: absolute;
    content: "";
    bottom: 15px;
    right: 10px;
    width: 50%;
    top: 80%;
    box-shadow: 0px 15px 10px rgba(100,100,100,0.5);
    transform: rotate(4deg);
}
.PostIt .paper {
    display: block;
    background-image: url(../../images/paper.png);
    background-repeat: repeat;
    background-size: 80%;
    width:100%;
    height:100%;
    position: absolute;
    top:0;
    left:0;
    mix-blend-mode: multiply;
    z-index: 0;
}

.PostIt .light{
    position: absolute;
    width:100%;
    height:100%;
    top:0;
    left:0;
    background: linear-gradient(to bottom right, rgb(230,230,230), rgb(255,255,255));
    mix-blend-mode: multiply;
}


.taskHeader {
    background-color : rgb(240,240,240);
    mix-blend-mode: multiply;
    z-index:3;
    display: flex;
    justify-content: flex-end;  
}

.taskHeader a{
  float: left;
  color: rgb(180,180,180);
  text-align: center;
  text-decoration: none;
  mix-blend-mode: multiply;
  line-height: 1.7em;
  padding: 0.2em;
  display: flex;
  align-content: center;
  transition: color 0.5s, background-color 0.5s;
}

.taskHeader i{
    font-size: 0.8em;

}

.taskHeader a:hover{
    background-color: rgb(200,190,190);
    cursor: pointer;
    color: rgb(255,255,255)
}

.horizontal .taskHeader{
    background-color : rgb(240,240,240);
    mix-blend-mode: multiply;
    margin: 0;
    flex-direction: column;
    justify-content: flex-start;
}

.horizontal .taskHeader a{
    float: left;
}

.taskBody {
    width: 85%;
    height: 90%;
    align-self: center;
    align-items: stretch;
    z-index: 2;
    mix-blend-mode: multiply;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;

    .nameInput {
        border:none;
        border-bottom: 2px dashed rgb(230,230,230);
        font-family: "Bad Script";
        font-size: 1em;
        resize: none;
        overflow: hidden;
        padding: 10px 0 10px 0;
        width: 100%;
        box-sizing: border-box;
        transition: border-color 0.5s;
    }
    .nameInput:focus {
        border-bottom: 2px dashed rgb(180,180,180);
        outline: none;
    }

    .descriptionInput{
        border:none;
        border-bottom: 2px dashed rgb(230,230,230);
        resize: none;
        font-family: "Calibri Light";
        width: 100%;
        font-size: 0.75em;
        box-sizing: border-box;
        padding:0 5px 10px 0;
        transition: border-color 0.5s;
    }

    .descriptionInput:focus{
        border-bottom: 2px dashed rgb(180,180,180);
        outline: none;
    }

    .submit{
        background: rgb(240,240,240);
        color: rgb(180,180,180);
        border-radius: 0.3em 0 0 0;
        border:none;
        position: absolute;
        bottom:0;
        right:0;
        padding:0.2em;
        transition: background-color 0.5s, color 0.5s;
    }
    .submit:focus{
        outline:none;
    }
    .submit:hover {
        background-color: rgb(220,220,220);
        cursor: pointer;
        color: rgb(255,255,255)
    }

    .name {
        font-family: "Bad Script";
        margin: 10px 0 10px 0;
        word-wrap:break-word;
        overflow: auto;
    }

    .seperator{
        border: none;
        height: 2px;
        background-color : rgb(230,230,230);
    }
    .description {
        font-size: 0.75em;
        margin: 10px 0 10px 0;
        word-wrap:break-word;
        overflow: auto;
    }
}

.horizontal .taskBody {
    padding: 0 0 0 10px;
    box-sizing: border-box;
}

.react-resizable-handle{
    z-index: 3;
}

.URGENT_IMPORTANT{
    background-color: $URGENT_IMPORTANT
}

.N_URGENT_IMPORTANT{
    background-color: $N_URGENT_IMPORTANT
}

.URGENT_N_IMPORTANT{
    background-color: $URGENT_N_IMPORTANT
}

.N_URGENT_N_IMPORTANT{
    background-color: $N_URGENT_N_IMPORTANT
}

